--- a/index.html
+++ b/index.html
@@ -21,11 +21,20 @@
           <li><a href="./bicicletas.html">Bicicletas</a></li>
           <li><a href="./seguros.html">Seguros</a></li>
           <li><a href="./contato.html">Contato</a></li>
-
         </ul>
       </nav>
     </div>
   </header>
+  <main class="introducao-bg">
+    <div class="introducao"> 
+      <div class="introducao-conteudo">
+      <h1>Bicicletas feitas sob medida<span>.</span></h1>
+      <p>Bicicletas elétricas de alta precisao e qualidade, feitas sob medida para você. Explore o mundo na sua velocidade com o Bikcraft.</p>
+      <a href="./bicicletas.html">Escolha a sua</a>
+    </div>
+      <img src="./img/fotos/introducao.jpg" alt="Bicicleta elétrica preta">
+    </div>
+  </main>
 </body>
 
 </html>
